CHORE: fixed size of gap on aside menu #64

--- a/src/assets/sass/global/_asideIaSelector.scss
+++ b/src/assets/sass/global/_asideIaSelector.scss
@@ -42,7 +42,7 @@ button{
     background-color: var(--aside-background);
     padding: 50px 10px 30px 10px;
     border-radius: 20px 0px 0px 20px;
-    gap: 30px;
+    gap: 20px;
 }
 .aside-desktop{
     position: absolute;
